[metadata]
name = PDPbox
author = SauceCat
author_email = jiangchun.lee@gmail.com
url = https://github.com/SauceCat/PDPbox
description = Python partial dependence plot toolbox
long_description = file: README.md
license = MIT

[options]
zip_safe = False
include_package_data = True
packages = 
    pdpbox
install_requires = 
    pandas
    numpy
    scipy
    joblib
    psutil
    matplotlib == 3.1.1
    scikit-learn

[options.package_data]
pdpbox = datasets/*/*

[versioneer]
VCS = git
style = pep440
versionfile_source = pdpbox/_version.py
versionfile_build = pdpbox/_version.py
tag_prefix = v
parentdir_prefix = PDPbox-